Generalization, refactor, clean and fixes