@@ -1,76 +1,72 @@
 package csgi.challenge.broadcaster;
 
 import csgi.challenge.parser.Parser;
-import csgi.challenge.token.Token;
 import csgi.challenge.worker.Worker;
 
 import java.io.EOFException;
 import java.util.*;
 import java.util.concurrent.*;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.concurrent.atomic.AtomicReference;
 
 /**
  * Process that collects the information processed by the parser and publish to all workers connected to it
  */
-public class Broadcaster {
+public class Broadcaster<T> {
 	/**
 	 * Number of threads that will execute the broadcasting
 	 */
 	private final CompletableFuture<Void> future;
-	private final AtomicReference<CompletableFuture<Void>> completion;
 	/**
-	 * All workers associated to this broadcaster
+	 * All workers associated with this broadcaster
 	 */
-	private final List<Worker<?>> workers;
-	private final Queue<Token> tokenQueue;
-	private volatile boolean parseComplete = false;
-	private final AtomicInteger activeTasks = new AtomicInteger(0);
-	private final CountDownLatch done = new CountDownLatch(1);
+	private final List<Worker<T, ?>> workers;
 	/**
 	 * Parser that will deliver the data to broadcast
 	 */
-	private final Parser parser;
-	private final ExecutorService executorInbound;
-	private final ExecutorService executorOutbound;
+	private final Parser<T> parser;
+	private final ExecutorService executorService;
+	private final Thread.Builder threadFactoryWorker;
+	private final Thread parserThread;
+	private final Thread broadcastThread;
 
 	/**
-	 * When the parser finishes
+	 * When the parser finishes,
 	 * this flag will signal the workers to return the results
 	 */
 
+	@SafeVarargs
+	public Broadcaster(Parser<T> parser, Worker<T, ?>... workers) {
 
-	public Broadcaster(Parser parser, Worker<?>... workers) {
-
-		this.workers = Arrays.asList(workers);
+		this.workers = new ArrayList<>(Arrays.asList(workers));
 		this.parser = parser;
-		future = new CompletableFuture<>();
-		executorInbound = Executors.newFixedThreadPool(100);
-		executorOutbound = Executors.newFixedThreadPool(10);
-		completion = new AtomicReference<>(new CompletableFuture<>());
-		tokenQueue = new ConcurrentLinkedQueue<>();
+
+
+		executorService = Executors.newCachedThreadPool();
+		threadFactoryWorker = Thread.ofVirtual().name("Worker-", 0);
+		parserThread = Thread.ofVirtual().unstarted(parser);
+		broadcastThread = Thread.ofVirtual().unstarted(this::run);
+		future = new CompletableFuture<>().thenAccept((unused) -> {
+					parserThread.interrupt();
+					executorService.shutdown();
+				}
+		);
 	}
+
 
 	/**
 	 * Adds worker to the broadcast
 	 *
 	 * @param worker worker that pretends to receive that from this broadcast
 	 */
-	public void addWorker(Worker<?> worker) {
+	public void addWorker(Worker<T, ?> worker) {
 		this.workers.add(worker);
 	}
 
 	public CompletableFuture<Void> start() {
-		Thread thread = new Thread(this::run);
-		thread.setName("BroadCaster");
-		thread.start();
-		return future;
-	}
-
-	public CompletableFuture<Void> start(int n, Executor executor) {
-		while (--n >= 0) {
-			executor.execute(this::run);
+		for (Worker<T, ?> worker : workers) {
+			threadFactoryWorker.start(worker);
 		}
+		broadcastThread.start();
+		parserThread.start();
 		return future;
 	}
 
@@ -79,66 +75,36 @@ public class Broadcaster {
 	 */
 	private void run() {
 		try {
-			for (Token token = tokenQueue.poll(); !parseComplete || token != null; token = tokenQueue.poll()) {
+			while (!this.parser.isComplete()) {
+				T token = parser.poll();
 				if (token == null) {
 					continue;
 				}
-				for (Worker<?> worker : workers) {
-					deliverToken(worker, token);
+				for (Worker<T, ?> worker : workers) {
+					worker.process(token);
 				}
-				completion.getAndUpdate(cf -> CompletableFuture.allOf(cf, outboundCF));
+				/*CompletableFuture.runAsync(() -> {
+					for (Worker<T, ?> worker : workers) {
+						deliverToken(worker, finalToken);
+					}
+				}, executorService);*/
+
 			}
 		} catch (NoSuchElementException e) {
 			if (!(e.getCause() instanceof EOFException)) {
-				completion.get().completeExceptionally(e.getCause());
 				future.completeExceptionally(e.getCause());
 			}
 		}
-
-		this.completion.get().thenAccept(unused -> {
-					complete();
-					future.complete(null);
-				})
-				.exceptionally(throwable -> {
-					future.completeExceptionally(throwable);
-					return null;
-				}).thenApply((ignore) -> {
-					this.executorInbound.close();
-					this.executorOutbound.close();
-					return null;
-				});
+		complete();
+		future.complete(null);
 	}
 
-
-	private void deliverToken(Worker<?> worker, Token token) {
-		if (worker.isCompleted()) {
-			return;
-		}
-		activeTasks.incrementAndGet();
-		CompletableFuture.runAsync(() -> worker.process(token), executorOutbound)
-				.thenRun(() -> {
-					if (activeTasks.decrementAndGet() == 0 && parseComplete) {
-						done.countDown();
-					}
-				})
-				.exceptionally(throwable -> {
-					future.completeExceptionally(throwable);
-					return null;
-				});
-	}
-
-	private void runParser() {
-		while (this.parser.hasNext()) {
-			tokenQueue.add(parser.getToken());
-		}
-		parseComplete = true;
-	}
 
 	/**
 	 * Called when the broadcast is complete and propagates this information to the workers
 	 */
 	public void complete() {
-		for (Worker<?> worker : this.workers) {
+		for (Worker<T, ?> worker : this.workers) {
 			worker.complete();
 		}
 
